--- a/redSocial/nbproject/project.properties
+++ b/redSocial/nbproject/project.properties
@@ -33,10 +33,26 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/redSocial
 excludes=
+file.reference.gs-algo-2.0.jar=C:\\Users\\adcd_\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-algo-2.0.jar-1=..\\librerias\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=C:\\Users\\adcd_\\Downloads\\gs-core-2.0.jar
+file.reference.gs-core-2.0.jar-1=..\\librerias\\gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\adcd_\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar-1=..\\librerias\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=C:\\Users\\adcd_\\Downloads\\gs-ui-swing-2.0.jar
+file.reference.gs-ui-swing-2.0.jar-1=..\\librerias\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-ui-javafx-2.0.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-algo-2.0.jar-1}:\
+    ${file.reference.gs-core-2.0.jar-1}:\
+    ${file.reference.gs-ui-javafx-2.0.jar-1}:\
+    ${file.reference.gs-ui-swing-2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
